# devops_ccsd_tech_challenge_conan_utils

./: CMakeLists.txt  conanfile.py
